Se realiza la plantilla para toda pagina de nuestro sistema. Agregando el header de nuestra pagina base.

--- a/index.html
+++ b/index.html
@@ -3,32 +3,34 @@
 <head>
     <meta charset="UTF-8">
 
-    <link rel="stylesheet" href="practica6.css">
+     <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Pacifico" rel="stylesheet">
+    <link rel="stylesheet" href="basicPage.css">
 
-    <title>&ltPet-ESCOM&gt/</title>
+    <title>&ltPet-ESCOM/&gt</title>
 </head>
 
 <body>
-    <header>
-        <img src="../../img/logoipn.png">
-        <img src="../../img/logoescom.png">
-        <div>
-            <p>
-                <h1>Tecnolog&iacute;as para la web</h1>
-                <h1>2CV9</h1>
-                <h2>Magical Girl Site</h2>
-            </p>
-        </div>
+    <header class="petEscom">
+        <div class="fondo contenedor"></div>
+        <div class="contenedor relativo">
+            <div class="centrar">
+                <img class="logo pegadoIzq" src="img/logo_ipn.png">
+                <img class="logo pegadoDer" src="img/logo_escom.png">
+            </div>
 
-        <nav>
-            <ul>
-                <li><a href="home.html">Inicio</a></li>
-                <li><a href="about.html">Sobre nosotros</a></li>
-                <li><a href="products.html">Productos</a></li>
-                <li><a href="help.html">Ayuda</a></li>
-                <li><a href="login.html">Entrar</a></li>
-            </ul>
-        </nav>
+            <h1 id="curso">Tecnologías para la web -2CV9-</h1>
+            <p id="titulo">&ltPet-ESCOM/&gt<hr><p>
+
+            <nav>
+                <ul>
+                    <li><a href="home.html">Inicio</a></li>
+                    <li><a href="about.html">Sobre nosotros</a></li>
+                    <li><a href="products.html">Productos</a></li>
+                    <li><a href="help.html">Ayuda</a></li>
+                    <li><a href="login.html">Entrar</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 </body>
 
