Formato de header base terminado
Links de nav por actualizar una vez se tengan paginas litas.

Se recomienda apartir de este commit iniciar nueva rama para ir agregando contenido con respecto el cuerpo de la pagina

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
 
-     <link href="https://fonts.googleapis.com/css?family=Fira+Sans|Pacifico" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Muli:700|Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="basicPage.css">
 
     <title>&ltPet-ESCOM/&gt</title>
@@ -14,24 +14,27 @@
         <div class="fondo contenedor"></div>
         <div class="contenedor relativo">
             <div class="centrar">
-                <img class="logo pegadoIzq" src="img/logo_ipn.png">
-                <img class="logo pegadoDer" src="img/logo_escom.png">
+                <a href="https://www.ipn.mx/"><img class="logo pegadoIzq" src="img/logo_ipn.png"></a>
+                <a href="http://www.escom.ipn.mx/"><img class="logo pegadoDer" src="img/logo_escom.png"></a>
             </div>
 
-            <h1 id="curso">Tecnologías para la web -2CV9-</h1>
-            <p id="titulo">&ltPet-ESCOM/&gt<hr><p>
-
-            <nav>
-                <ul>
-                    <li><a href="home.html">Inicio</a></li>
-                    <li><a href="about.html">Sobre nosotros</a></li>
-                    <li><a href="products.html">Productos</a></li>
-                    <li><a href="help.html">Ayuda</a></li>
-                    <li><a href="login.html">Entrar</a></li>
-                </ul>
-            </nav>
+            <a class="inicio" href="http://localhost/TecnoWeb/Proyecto_Web/"><p id="titulo">&ltPet-ESCOM/&gt<hr id="lineTitulo"><p></a>
         </div>
     </header>
+    <div class="superior">
+        <h1 id="curso">Tecnologías para la web -2CV9-</h1>
+        <nav class="menu">
+            <ul>
+                <li><a href="home.html">Inicio</a></li>
+                <li><a href="about.html">Sobre nosotros</a></li>
+                <li><a href="products.html">Productos</a></li>
+                <li><a href="help.html">Ayuda</a></li>
+                <li><a href="login.html">Entrar</a></li>
+            </ul>
+        </nav>
+    </div>
+    <hr class="separador">
+
 </body>
 
 </html>
