Se crea funcion javascript que escribe texto sobre html nos basaremos para modelar acticles y sections, con solo llamar a esta funcion y darle parametros de texto, imagenes que se agreguen, etc.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 
     <link href="https://fonts.googleapis.com/css?family=Muli:700|Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="basicPage.css">
+    <script type="text/javascript" src="funciones.js"></script>
 
     <title>&ltPet-ESCOM/&gt</title>
 </head>
@@ -25,7 +26,7 @@
         <h1 id="curso">Tecnologías para la web -2CV9-</h1>
         <nav class="menu">
             <ul>
-                <li><a href="home.html">Inicio</a></li>
+                <li><a href="http://localhost/TecnoWeb/Proyecto_Web/">Inicio</a></li>
                 <li><a href="about.html">Sobre nosotros</a></li>
                 <li><a href="products.html">Productos</a></li>
                 <li><a href="help.html">Ayuda</a></li>
@@ -34,6 +35,11 @@
         </nav>
     </div>
     <hr class="separador">
+    <main>
+        <script type="text/javascript">
+            saludar();
+        </script>
+    </main>
 
 </body>
 
