se agrega carpeta styles, se renombra basicPage.css como header.css
se mueve carpeta img a styles

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
 
     <link href="https://fonts.googleapis.com/css?family=Muli:700|Pacifico" rel="stylesheet">
-    <link rel="stylesheet" href="basicPage.css">
+    <link rel="stylesheet" href="styles/header.css">
     <script type="text/javascript" src="funciones.js"></script>
 
     <title>&ltPet-ESCOM/&gt</title>
@@ -15,8 +15,8 @@
         <div class="fondo contenedor"></div>
         <div class="contenedor relativo">
             <div class="centrar">
-                <a href="https://www.ipn.mx/"><img class="logo pegadoIzq" src="img/logo_ipn.png"></a>
-                <a href="http://www.escom.ipn.mx/"><img class="logo pegadoDer" src="img/logo_escom.png"></a>
+                <a href="https://www.ipn.mx/"><img class="logo pegadoIzq" src="styles/img/logo_ipn.png"></a>
+                <a href="http://www.escom.ipn.mx/"><img class="logo pegadoDer" src="styles/img/logo_escom.png"></a>
             </div>
 
             <a class="inicio" href="http://localhost/TecnoWeb/Proyecto_Web/"><p id="titulo">&ltPet-ESCOM/&gt<hr id="lineTitulo"><p></a>
@@ -36,6 +36,11 @@
     </div>
     <hr class="separador">
     <main>
+        <section>
+            <article></article>
+            <article></article>
+        </section>
+
         <script type="text/javascript">
             saludar();
         </script>
