Ejemplo de como deberia insertarse un articulo dentro de una seccion.
Articulo mostrado por tabla.
Falta edicion.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
 
     <link href="https://fonts.googleapis.com/css?family=Muli:700|Pacifico" rel="stylesheet">
     <link rel="stylesheet" href="styles/header.css">
+    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/aside.css">
     <script type="text/javascript" src="funciones.js"></script>
 
     <title>&ltPet-ESCOM/&gt</title>
@@ -34,17 +36,45 @@
             </ul>
         </nav>
     </div>
-    <hr class="separador">
-    <main>
-        <section>
-            <article></article>
-            <article></article>
-        </section>
 
-        <script type="text/javascript">
-            saludar();
-        </script>
+    <hr class="separador">
+
+    <main class="principal">
+        <section class="seccion">
+            section
+            <article class="articulos">
+                uno
+                <table class="descripcionCorta">
+                    <tr>
+                        <td>Nombre</td>
+                        <td>El Jeilo</td>
+                        <td rowspan="4"><img src="styles/img/eljeilo.jpg" class="vistaInicial"></td>
+                    </tr>
+                    <tr>
+                        <td>Precio</td>
+                        <td>$5000</td>
+                    </tr>
+                    <tr>
+                        <td>Calificacion</td>
+                        <td>4.5</td>
+                    </tr>
+                    <tr>
+                        <td>Descripción</td>
+                        <td>Videojuego basado en dispros que hacen pium pium y solo quiero rellenas informacion vale bye :v</td>
+                    </tr>
+                </table>
+            </article>
+            <article class="articulos">dos</article>
+        </section>
     </main>
+
+    <aside class="secundario">
+        <section class="seccionA">
+            section
+            <article>uno</article>
+            <article>dos</article>
+        </section>
+    </aside>
 
 </body>
 
