Se crea funcion js para agregar un articulo -estatico-
Falta dar formato a section, article y aside, solo se incluye mas no es presentable aun.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
 
@@ -41,38 +41,19 @@
 
     <main class="principal">
         <section class="seccion">
-            section
-            <article class="articulos">
-                uno
-                <table class="descripcionCorta">
-                    <tr>
-                        <td>Nombre</td>
-                        <td>El Jeilo</td>
-                        <td rowspan="4"><img src="styles/img/eljeilo.jpg" class="vistaInicial"></td>
-                    </tr>
-                    <tr>
-                        <td>Precio</td>
-                        <td>$5000</td>
-                    </tr>
-                    <tr>
-                        <td>Calificacion</td>
-                        <td>4.5</td>
-                    </tr>
-                    <tr>
-                        <td>Descripción</td>
-                        <td>Videojuego basado en dispros que hacen pium pium y solo quiero rellenas informacion vale bye :v</td>
-                    </tr>
-                </table>
-            </article>
-            <article class="articulos">dos</article>
+            <script type="text/javascript">
+                articulo();
+                articulo();
+            </script>
         </section>
     </main>
 
     <aside class="secundario">
         <section class="seccionA">
-            section
-            <article>uno</article>
-            <article>dos</article>
+            <script type="text/javascript">
+                articulo();
+                articulo();
+            </script>
         </section>
     </aside>
 
