Estilo a la descripción del producto
Modificación de la tabla que presenta el producto dentro de article. 

Siguiente paso intentar jalar distintos productos de una base de datos, se recomienda experimentar con una base prueba.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 
 <body>
-    <header class="petEscom">
+    <header id="petEscom">
         <div class="centrar">
             <a href="https://www.ipn.mx/"><img class="logo pegadoIzq" src="styles/img/logo_ipn.png"></a>
             <a href="http://www.escom.ipn.mx/"><img class="logo pegadoDer" src="styles/img/logo_escom.png"></a>
@@ -42,41 +42,29 @@
 
     <hr id="separadorG">
 
-    <main class="principal">
+    <main id="principal">
         <section class="seccion">
-            <article class="articulos">
-
-                <script type="text/javascript">
-                    tablePresent();
-                    tablePresent();
-                    tablePresent();
-                    tablePresent();
-                </script>
-
-                <hr class="separadorH">
-
-                <div id="openModal" class="modalDialog">
-                    <div>
-                        <a href="#close" title="Close" class="close">X</a>
-                        <h2>Mi modal</h2>
-                        <p>Este es un ejemplo de modal creado gracias al poder de CSS3.</p>
-                        <p>Puedes hacer un montón de cosas aquí como alertas o incluso crear un formulario de registro aquí mismo.</p>
-                    </div>
-                </div>
-            </article>
 
             <script type="text/javascript">
+                muestrario();
+                articuloMediano();
+                muestrario();
+                articuloMediano();
                 articuloMediano();
             </script>
+
         </section>
     </main>
 
-    <aside class="secundario">
+    <aside id="secundario">
         <section class="seccionA">
+
             <script type="text/javascript">
                 articuloMediano();
                 articuloMediano();
+                articuloMediano();
             </script>
+
         </section>
     </aside>
 
